# nanograph

./: .env.example  .gitignore  BUG-path-spaces.md  CLAUDE.md  Cargo.toml  nanograph.toml  package-lock.json  ql-canon.md  ql-update.md
.github/workflows/: ci.yml  publish-crates.yml  publish-npm.yml  release.yml
crates/nanograph/: Cargo.toml
crates/nanograph-cli/: Cargo.toml
crates/nanograph-cli/src/: config.rs  main.rs  metadata.rs  tests.rs
crates/nanograph-cli/tests/: bootstrap_and_env.rs  bug_regressions.rs  config_and_aliases.rs  config_failures.rs  display_formats.rs  docs_and_output.rs  embed_command.rs  load_modes_and_export.rs  local_embed.rs  mutation_toolbelt.rs  revops_admin_and_cdc.rs  revops_workflows.rs  schema_analysis.rs  starwars_export_roundtrip.rs  starwars_workflows.rs
crates/nanograph-ffi/: Cargo.toml
crates/nanograph-ffi/src/: lib.rs
crates/nanograph-ffi/swift/: README.md
crates/nanograph-ts/: Cargo.toml  README.md  index.js  package.json  types.d.ts
crates/nanograph-ts/__test__/: index.spec.mjs
docs/: README.md
docs/dev/: best-practices-addotion.md  cdc-wal-proposal.md  dataset-sharding.md  distributed-architecture.md  fixes.md  in-memory-inventory.md  multimodal-blobs.md  nano-omni.md  omnigraph-specs.md  release-checklist.md  release-notes-v1.1.1.md  release-notes-v1.1.2.md  release-notes-v1.3.0.md  release-notes-v1.3.1.md  research-db-patterns.md  storage-modes.md  swift-split-repo.md
docs/user/: best-practices.md  blobs.md  cli-reference.md  config.md  context-graph-example.md  embeddings.md  folder-structure.md  lance-migration.md  queries.md  quick-start.md  schema.md  search.md  starwars-example.md
examples/codebase/: README.md  codebase.gq  codebase.jsonl  codebase.pg  nanograph.toml
examples/revops/: README.md  nanograph.toml  revops.gq  revops.jsonl  revops.pg
examples/starwars/: README.md  nanograph.toml  starwars.gq  starwars.pg
tools/swift-package/: render_package.sh
tools/ts-sdk/: smoke_test_consumer.sh
(+71 files in other folders)
