[workspace]
resolver = "2"
members = [
    "crates/nanograph",
    "crates/nanograph-cli",
    "crates/nanograph-ts",
    "crates/nanograph-ffi",
]
default-members = [
    "crates/nanograph",
    "crates/nanograph-cli",
]

[workspace.dependencies]
# Arrow sub-crates (replaces monolithic `arrow`)
arrow-array = "58"
arrow-ipc = "58"
arrow-schema = "58"
arrow-select = "58"
arrow-cast = { version = "58", features = ["prettyprint"] }
arrow-ord = "58"

# DataFusion sub-crates (replaces monolithic `datafusion`)
datafusion-physical-plan = "53"
datafusion-physical-expr = "53"
datafusion-execution = "53"
datafusion-common = "53"
datafusion-expr = "53"
datafusion-functions-aggregate = "53"

# Lance (local-only — no cloud backends)
lance = { version = "6.0.0", default-features = false }
lance-file = "6.0.0"
lance-io = "6.0.0"
lance-index = "6.0.0"
lance-linalg = "6.0.0"
lance-namespace = "6.0.0"
lance-namespace-impls = { version = "6.0.0", default-features = false }
lance-table = "6.0.0"
object_store = "0.12.5"

futures = "0.3"
async-trait = "0.1"
pest = "2"
pest_derive = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
color-eyre = "0.6"
tempfile = "3"
ahash = "0.8"
ariadne = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
napi = { version = "2", features = ["async", "serde-json"] }
napi-derive = "2"
criterion = "0.5"

[profile.dev]
debug = 0

# Optimize deps in dev mode so tests run at reasonable speed
# while nanograph crate itself stays unoptimized for fast rebuilds
[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 16
strip = true
